crates/templated_uri/tests/ui/option_string_in_restricted_position.stderr
error[E0277]: the trait bound `String: templated_uri::Escape` is not satisfied
  --> tests/ui/option_string_in_restricted_position.rs:15:1
   |
15 | #[templated(template = "/users/{user_id}", unredacted)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `templated_uri::Escape` is not implemented for `String`
...
18 |     user_id: Option<String>,
   |                     ------ required by a bound introduced by this call
   |
   = help: the following other types implement trait `templated_uri::Escape`:
             Escaped<Cow<'static, str>>
             IpAddr
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
             NonZero<usize>
           and $N others

error[E0277]: the trait bound `String: templated_uri::Escape` is not satisfied
  --> tests/ui/option_string_in_restricted_position.rs:18:21
   |
18 |     user_id: Option<String>,
   |                     ^^^^^^ the trait `templated_uri::Escape` is not implemented for `String`
   |
   = help: the following other types implement trait `templated_uri::Escape`:
             Escaped<Cow<'static, str>>
             IpAddr
             NonZero<u128>
             NonZero<u16>
             NonZero<u32>
             NonZero<u64>
             NonZero<u8>
             NonZero<usize>
           and $N others
